--- a/theme/layout/theme.liquid
+++ b/theme/layout/theme.liquid
@@ -28,7 +28,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 
 	<!-- CSS ================================================== -->
-	{{ 'timber.scss.css' | asset_url | stylesheet_tag }}
+	{{ 'styles.scss.css' | asset_url | stylesheet_tag }}
 
 	{% if settings.ajax_cart %}
 	<!-- Ajaxify Cart Plugin ================================================== -->
